# paperballots_parser

./: .gitignore  README.md  pyproject.toml
paperballots_parser/: doctr_work.py  opencv_work.py  pytesseract_work.py
